fixed content box letter spacing

--- a/home_page.css
+++ b/home_page.css
@@ -48,6 +48,7 @@ header p {
 	font-size: 2em;
 	margin: auto;
 	margin-top: 30%;
+	letter-spacing: 0.1em;
 }
 
 .content_box:hover {
